--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -1,4 +1,6 @@
-on: [push]
+on:  
+  workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -9,9 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      #Run your project's build step
       - name: Build
-      - run: npm install && npm run build
+        run: npm install && npm run build
       - name: Publish
         uses: cloudflare/pages-action@1
         with:
